--- a/live/index.html
+++ b/live/index.html
@@ -283,27 +283,27 @@ document.body.appendChild(marker);
 	</div>
 	<nav class="bottom-bar">
 		<a href="/index.html">Home</a>
-		<a href="photos.html">Photography</a>
-		<a href="videos.html">Live Recordings</a>
-		<a href="/live/interviews.html">Interviews</a>
-		<a href="contact.html">Contact</a>
+		<a href="/photos.html">Photography</a>
+		<a href="/videos.html">Live Recordings</a>
+		<a href="/interviews.html">Interviews</a>
+		<a href="/contact.html">Contact</a>
 	</nav>
 		<!-- Background is now set via CSS -->
 										<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview" class="logo-img" border="0"></a>
 
 			<!-- Hotspot: Coffee Table (Interviews) -->
-			<a href="/live/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
+			<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
 				<span class="hotspot-label">Interviews</span>
 			</a>
 
 			<!-- Hotspot: Camera (Photography) -->
-			<a href="photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
+			<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
 				<span class="hotspot-label">Photography</span>
 			</a>
 <!-- No special JS for Photography hotspot -->
 
 			<!-- Hotspot: TV (Live Recordings) -->
-			<a href="videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
+			<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
 				<span class="hotspot-label">Live Recordings</span>
 			</a>
 </body>
