--- a/live/interviews.html
+++ b/live/interviews.html
@@ -1,11 +1,11 @@
   <!-- CSS moved to <head> -->
 <body>
   <nav class="bottom-bar">
-    <a href="index.html">Home</a>
-    <a href="photos.html">Photography</a>
-    <a href="videos.html">Live Recordings</a>
-  <a href="/live/interviews.html">Interviews</a>
-    <a href="contact.html">Contact</a>
+  <a href="/index.html">Home</a>
+  <a href="/photos.html">Photography</a>
+  <a href="/videos.html">Live Recordings</a>
+  <a href="/interviews.html">Interviews</a>
+  <a href="/contact.html">Contact</a>
   </nav>
 <!DOCTYPE html>
 <html lang="en">
@@ -163,7 +163,7 @@
   <div class="bg-img-container">
   <img src="iv.png" class="bg-img" alt="Interview Collection Background" />
   </div>
-  <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
+  <a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
   <div class="photos-hero">
   <!-- Add your interviews content here -->
   </div>
