--- a/videos.html
+++ b/videos.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dakota's Music World</title>
+  <title>Videos | Dakota's Music World</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
   <!-- ...existing styles... -->
 </head>
 <body>
-  <!-- ...existing content from /live/index.html... -->
+  <!-- ...existing content from /live/videos.html... -->
 </body>
 </html>
