--- a/live/photos.html
+++ b/live/photos.html
@@ -33,11 +33,11 @@
   </style>
 <body>
   <nav class="bottom-bar">
-    <a href="index.html">Home</a>
-    <a href="photos.html">Photography</a>
-    <a href="videos.html">Live Recordings</a>
-    <a href="interviews.html">Interviews</a>
-    <a href="contact.html">Contact</a>
+    <a href="/index.html">Home</a>
+    <a href="/photos.html">Photography</a>
+    <a href="/videos.html">Live Recordings</a>
+    <a href="/interviews.html">Interviews</a>
+    <a href="/contact.html">Contact</a>
   </nav>
 <!DOCTYPE html>
 <html lang="en">
