--- a/photos.html
+++ b/photos.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photos | Dakota's Music World</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
   <style>
     .bottom-bar {
       position: fixed;
@@ -37,6 +30,23 @@
       background: #38451f;
       color: #f47a2c;
     }
+  </style>
+<body>
+  <nav class="bottom-bar">
+    <a href="/index.html">Home</a>
+    <a href="/photos.html">Photography</a>
+    <a href="/videos.html">Live Recordings</a>
+    <a href="/interviews.html">Interviews</a>
+    <a href="/contact.html">Contact</a>
+  </nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photos | Dakota's Music World</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <style>
     html, body {
       height: 100%;
       margin: 0;
@@ -128,16 +138,9 @@
   </style>
 </head>
 <body>
-  <nav class="bottom-bar">
-    <a href="/index.html">Home</a>
-    <a href="/photos.html">Photography</a>
-    <a href="/videos.html">Live Recordings</a>
-    <a href="/interviews.html">Interviews</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
-  <a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
+  <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
   <div class="bg-img-container">
-    <img src="camera.png" class="bg-img" alt="Photos Background" />
+  <img src="camera.png" class="bg-img" alt="Photos Background" />
   </div>
   <div class="photos-hero">
     <!-- Add your photo gallery or content here -->
