--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
+		@media (max-width: 600px) {
+			.logo-link {
+				top: 12vw;
+				left: 2vw;
+			}
+			.logo-img {
+				width: 38vw;
+				min-width: 80px;
+				max-width: 180px;
+			}
+			.bottom-bar {
+				font-size: 1.1em;
+				gap: 10px;
+				padding: 10px 0 8px 0;
+			}
+			.bottom-bar a {
+				padding: 6px 8px;
+				font-size: 1em;
+			}
+			.photos-hero, .hero, .main-hero, .interviews-hero, .videos-hero {
+				padding-top: 10vw;
+				padding-bottom: 18vw;
+				min-height: 100vh;
+				box-sizing: border-box;
+			}
+			.main-title, .photos-title, .interviews-title, .videos-title {
+				font-size: 9vw !important;
+				margin-bottom: 5vw;
+				padding: 0 2vw;
+			}
+		}
 body.zoomed-photography .hotspot,
 body.zoomed-photography .hotspot-label {
 	display: none !important;
