--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
   <style>
     html, body {
-      height: 100%;
       margin: 0;
       padding: 0;
+      height: 100%;
+      min-height: 100vh;
     }
     body {
       width: 100vw;
-      height: 100vh;
-      overflow: hidden;
+      min-width: 100vw;
+      min-height: 100vh;
       background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Montserrat', Arial, sans-serif;
       color: #fff;
-      min-width: 100vw;
-      min-height: 100vh;
       box-sizing: border-box;
       display: block;
     }
@@ -60,13 +59,16 @@
     }
     .contact-hero {
       width: 100vw;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       position: relative;
       z-index: 1;
+      padding-top: 5vh;
+      padding-bottom: 5vh;
+      box-sizing: border-box;
     }
     .contact-title {
       font-family: 'Montserrat', Arial, sans-serif;
@@ -154,6 +156,16 @@
       transition: width 0.2s, top 0.2s, left 0.2s;
     }
     @media (max-width: 600px) {
+      html, body {
+        height: auto;
+        min-height: 100vh;
+      }
+      body {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: auto;
+        min-height: 100vh;
+      }
       .logo-link {
         top: 12vw;
         left: 2vw;
@@ -202,7 +214,7 @@
       .contact-hero {
         padding-top: 10vw;
         padding-bottom: 18vw;
-        min-height: 100vh;
+        min-height: unset;
         box-sizing: border-box;
       }
     }
