Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -206,10 +206,15 @@
         font-size: 1.1em;
         gap: 10px;
         padding: 10px 0 8px 0;
+        overflow-x: auto;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
       }
       .bottom-bar a {
         padding: 6px 8px;
         font-size: 1em;
+        flex: 0 0 auto;
+        display: inline-block;
       }
       .contact-hero {
         padding-top: 10vw;
