--- a/contact.html
+++ b/contact.html
@@ -203,18 +203,19 @@
         margin-top: 2vw;
       }
       .bottom-bar {
-        font-size: 1.1em;
-        gap: 10px;
-        padding: 10px 0 8px 0;
-        overflow-x: auto;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
+        font-size: 0.95em;
+        gap: 2vw;
+        padding: 8px 0 6px 0;
+        overflow-x: visible;
+        white-space: normal;
       }
       .bottom-bar a {
-        padding: 6px 8px;
-        font-size: 1em;
-        flex: 0 0 auto;
-        display: inline-block;
+        padding: 4px 4px;
+        font-size: 0.98em;
+        flex: 1 1 0;
+        min-width: 0;
+        display: block;
+        text-align: center;
       }
       .contact-hero {
         padding-top: 10vw;
