--- a/contact.html
+++ b/contact.html
@@ -203,19 +203,22 @@
         margin-top: 2vw;
       }
       .bottom-bar {
-        font-size: 0.95em;
+        font-size: 1em;
         gap: 2vw;
         padding: 8px 0 6px 0;
-        overflow-x: visible;
+        flex-wrap: wrap;
+        row-gap: 2vw;
         white-space: normal;
       }
       .bottom-bar a {
-        padding: 4px 4px;
-        font-size: 0.98em;
-        flex: 1 1 0;
-        min-width: 0;
+        padding: 6px 8px;
+        font-size: 1em;
+        flex: 1 1 40%;
+        min-width: 40vw;
+        max-width: 48vw;
         display: block;
         text-align: center;
+        margin-bottom: 2px;
       }
       .contact-hero {
         padding-top: 10vw;
