--- a/contact.html
+++ b/contact.html
@@ -204,21 +204,28 @@
       }
       .bottom-bar {
         font-size: 1em;
-        gap: 2vw;
-        padding: 8px 0 6px 0;
         flex-wrap: wrap;
-        row-gap: 2vw;
+        padding: 8px 0 6px 0;
+        row-gap: 0;
+        column-gap: 0;
         white-space: normal;
+        justify-content: flex-start;
       }
       .bottom-bar a {
-        padding: 6px 8px;
+        width: 50%;
+        box-sizing: border-box;
+        padding: 8px 0;
         font-size: 1em;
-        flex: 1 1 40%;
-        min-width: 40vw;
-        max-width: 48vw;
         display: block;
         text-align: center;
-        margin-bottom: 2px;
+        border-radius: 0;
+        margin: 0;
+      }
+      .bottom-bar a:nth-child(odd) {
+        border-right: 1px solid rgba(255,255,255,0.08);
+      }
+      .bottom-bar a:nth-child(-n+2) {
+        border-bottom: 1px solid rgba(255,255,255,0.08);
       }
       .contact-hero {
         padding-top: 10vw;
