Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -188,8 +188,8 @@
         min-height: 100vh;
       }
       .logo-link {
-        top: 12vw;
-        left: 2vw;
+        top: 4vw;
+        left: 18vw;
       }
       .logo-img {
         width: 38vw;
@@ -230,7 +230,7 @@
         display: block;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 200;
       }
       .hamburger {
