Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -169,8 +169,9 @@
       }
       .logo-link {
         top: 2vw;
-        left: 50%;
-        transform: translateX(-50%);
+        left: 0;
+        width: 100%;
+        text-align: center;
       }
       .logo-img {
         width: 38vw;
