Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -242,7 +242,9 @@
         display: none;
         position: absolute;
         top: 56px;
-        right: 0;
+        left: 0;
+        right: auto;
+        width: 80vw;
         background: rgba(56,69,31,0.98);
         border-radius: 0 0 12px 12px;
         box-shadow: 0 4px 16px #0008;
