Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -243,8 +243,9 @@
         position: absolute;
         top: 56px;
         left: 0;
-        right: auto;
-        width: 80vw;
+        right: 0;
+        margin: 0 auto;
+        width: 90vw;
         background: rgba(56,69,31,0.98);
         border-radius: 0 0 12px 12px;
         box-shadow: 0 4px 16px #0008;
