--- a/contact.html
+++ b/contact.html
@@ -178,6 +178,12 @@
         min-width: 80px;
         max-width: 180px;
       }
+      .hamburger {
+        height: 38vw;
+        min-height: 80px;
+        max-height: 180px;
+        width: 48px;
+      }
       .contact-form {
         width: 96vw;
         max-width: 98vw;
