--- a/contact.html
+++ b/contact.html
@@ -179,10 +179,9 @@
         max-width: 180px;
       }
       .hamburger {
-        height: 38vw;
-        min-height: 80px;
-        max-height: 180px;
         width: 48px;
+        height: 48px;
+        margin-top: 8vw;
       }
       .contact-form {
         width: 96vw;
