--- a/contact.html
+++ b/contact.html
@@ -244,7 +244,8 @@
         transition: 0.2s;
       }
       .mobile-menu {
-        display: none;
+        display: flex;
+        flex-direction: column;
         position: absolute;
         top: 56px;
         left: 0;
@@ -255,9 +256,17 @@
         border-radius: 0 0 12px 12px;
         box-shadow: 0 4px 16px #0008;
         min-width: 180px;
-        flex-direction: column;
         padding: 8px 0;
         z-index: 202;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
+      }
+      .mobile-menu.open {
+        max-height: 500px;
+        opacity: 1;
+        transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
       }
       .mobile-menu a {
         color: #f47a2c;
