--- a/contact.html
+++ b/contact.html
@@ -248,14 +248,14 @@
         flex-direction: column;
         position: absolute;
         top: 56px;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        width: 55vw;
+        left: 50%;
+        transform: translateX(-50%);
+        width: fit-content;
+        min-width: 120px;
+        max-width: 90vw;
         background: rgba(56,69,31,0.98);
-        border-radius: 0 0 12px 12px;
+        border-radius: 18px;
         box-shadow: 0 4px 16px #0008;
-        min-width: 100px;
         padding: 2px 0;
         z-index: 202;
         max-height: 0;
