Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -252,9 +252,8 @@
         transform: translateX(-50%);
         width: fit-content;
         min-width: 120px;
-        max-width: 90vw;
         background: rgba(56,69,31,0.98);
-        border-radius: 18px;
+        border-radius: 18px !important;
         box-shadow: 0 4px 16px #0008;
         padding: 2px 0;
         z-index: 202;
