--- a/contact.html
+++ b/contact.html
@@ -251,15 +251,17 @@
         left: 50%;
         transform: translateX(-50%);
         width: fit-content;
-        min-width: 120px;
+        min-width: 180px;
         background: rgba(56,69,31,0.98);
         border-radius: 18px !important;
         box-shadow: 0 4px 16px #0008;
-        padding: 2px 0;
+        padding: 2px 12px;
+        box-sizing: border-box;
         z-index: 202;
         max-height: 0;
         overflow: hidden;
         opacity: 0;
+        text-align: center;
         transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
       }
       .mobile-menu.open {
@@ -276,6 +278,7 @@
         display: block;
         font-size: 1.1em;
         border-bottom: 1px solid #38451f;
+        text-align: center;
       }
       .mobile-menu a:last-child {
         border-bottom: none;
