--- a/contact.html
+++ b/contact.html
@@ -248,13 +248,10 @@
         flex-direction: column;
         position: absolute;
         top: 56px;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        transform: none;
-        width: 90vw;
-        min-width: 0;
-        max-width: 400px;
+        left: 10px;
+        width: 80vw;
+        min-width: 180px;
+        max-width: 320px;
         background: rgba(56,69,31,0.98);
         border-radius: 18px !important;
         box-shadow: 0 4px 16px #0008;
