--- a/contact.html
+++ b/contact.html
@@ -249,19 +249,19 @@
         position: absolute;
         top: 56px;
         left: 10px;
-        width: 80vw;
-        min-width: 180px;
-        max-width: 320px;
+        width: 60vw;
+        min-width: 160px;
+        max-width: 240px;
         background: rgba(56,69,31,0.98);
         border-radius: 18px !important;
         box-shadow: 0 4px 16px #0008;
-        padding: 2px 12px;
+        padding: 2px 8px;
         box-sizing: border-box;
         z-index: 202;
         max-height: 0;
         overflow: hidden;
         opacity: 0;
-        text-align: center;
+        text-align: left;
         transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
       }
       .mobile-menu.open {
@@ -274,11 +274,11 @@
         color: #f47a2c;
         text-decoration: none;
         font-weight: 700;
-        padding: 8px 12px;
+        padding: 8px 8px;
         display: block;
         font-size: 1.1em;
         border-bottom: 1px solid #38451f;
-        text-align: center;
+        text-align: left;
       }
       .mobile-menu a:last-child {
         border-bottom: none;
