Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -248,7 +248,7 @@
         flex-direction: column;
         position: absolute;
         top: 56px;
-        left: 10px;
+        left: 0;
         width: 60vw;
         min-width: 160px;
         max-width: 240px;
