--- a/contact.html
+++ b/contact.html
@@ -214,11 +214,11 @@
         display: none !important;
       }
       .mobile-nav {
-        display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 200;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 200;
       }
       .hamburger {
         display: flex;
