Describe what you changed here

--- a/contact.html
+++ b/contact.html
@@ -311,16 +311,8 @@
     <a href="/contact.html">Contact</a>
   </nav>
   <div class="mobile-nav">
-    <button class="hamburger" aria-label="Open navigation menu">
-      <span></span><span></span><span></span>
-    </button>
-    <div class="mobile-menu">
-      <a href="/index.html">Home</a>
-      <a href="/photos.html">Photography</a>
-      <a href="/videos.html">Live Recordings</a>
-      <a href="/interviews.html">Interviews</a>
-      <a href="/contact.html">Contact</a>
-    </div>
+  <button class="hamburger" aria-label="Open navigation menu" style="display:none;"></button>
+  <div class="mobile-menu" style="display:none;"></div>
   </div>
   <a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
   <div class="contact-hero">
