--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 		@media (max-width: 600px) {
-			.logo-link {
-				   /* Removed duplicate @media block */
-								width: 38vw;
-								min-width: 80px;
-								max-width: 180px;
-							}
-							.hamburger {
-								width: 48px;
-								height: 48px;
-								margin-top: 6vw;
-							}
-							.bottom-bar {
-								display: none !important;
-							}
-							.mobile-nav {
-								display: block;
-							}
-							.hamburger {
-								display: flex;
-								flex-direction: column;
-								justify-content: center;
-								align-items: center;
-								width: 48px;
-								height: 48px;
-								background: rgba(56,69,31,0.82);
-								border: none;
-								border-radius: 8px;
-								margin: 10px 0 0 10px;
-								cursor: pointer;
-								z-index: 201;
-							}
-							.hamburger span {
-								display: block;
+
+			</style>
+			</head>
+			<body>
+				<div class="mobile-nav">
+					<button class="hamburger" aria-label="Open navigation menu">
+						<span></span><span></span><span></span>
+					</button>
+					<div class="mobile-menu">
+						<a href="/index.html">Home</a>
+						<a href="/photos.html">Photography</a>
+						<a href="/videos.html">Live Recordings</a>
+						<a href="/interviews.html">Interviews</a>
+						<a href="/contact.html">Contact</a>
+					</div>
+				</div>
+				<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
+				<script>
+					// Hamburger menu toggle for mobile
+					document.addEventListener('DOMContentLoaded', function() {
+						var hamburger = document.querySelector('.hamburger');
+						var menu = document.querySelector('.mobile-menu');
+						if (hamburger && menu) {
+							hamburger.addEventListener('click', function() {
+								menu.classList.toggle('open');
+							});
+							// Optional: close menu when a link is clicked
+							menu.querySelectorAll('a').forEach(function(link) {
+								link.addEventListener('click', function() {
+									menu.classList.remove('open');
+								});
+							});
+						}
+					});
+				</script>
 								width: 28px;
 								height: 4px;
 								margin: 3px 0;
